ui_dsl/1.4/18_Conformance.md
# 18. Conformance

**Normative.** This document is the single source for conformance requirements. Other sections describe behavior; this file binds them to **MUST / SHOULD / MAY** tags per profile. Where this document and any other section disagree, this document governs.

Requirement verbs follow RFC 2119 / RFC 8174 semantics as summarised in [`00_Overview.md`](00_Overview.md) §0.6.

## 18.1 Conformance Model

A runtime implementation declares the set of **Profiles** it supports. Each Profile is a named subset of DSL capabilities with normative requirements. Profiles replace version-based conformance statements ("v1.2 compliant") because version numbers alone do not disambiguate which optional features a runtime implements.

### 18.1.1 Profile List

| Profile | Dependency | Scope |
|---------|------------|-------|
| **Core** | *(none)* | Required for all implementations. Application / Page / Widget tree, core widgets, binding engine, core actions, theme system, MCP protocol contract. |
| **Client** *(since v1.1)* | Core | Client-side `client.*` actions, permission system, bidirectional channels, `client://` resource protocol. |
| **Bundle** *(since v1.2)* | Core | ApplicationDefinition metadata, `bundle://` URI scheme, `ui://app/info` well-known resource, bundle adapters. |
| **Advanced** *(since v1.0)* | Core | Advanced widgets (chart, canvas, code editor, terminal, etc.). |
| **Template** *(since v1.1 / v1.3)* | Core | Template system — static invocation (v1.1), stateful + lifecycle + remote libraries (v1.3). |
| **Composition** *(since v1.4)* | Core | Rendering definitions sourced from other origins — `DefinitionSource`, the `view` widget, origin-scoped dispatch, per-origin isolation. |
| **Payment** *(since v1.4.2)* | Core | Taking payment for a declared item through a host-owned payment surface — the `payment` action, the outbound and return-link rules of [`07_Security.md`](07_Security.md) §7.3.5. Requirements in §18.11. |
| **Location** *(since v1.4.3)* | Core | Answering where this device is, once, at a precision the document declared and the host may reduce — the `location` action and the rules of [`07_Security.md`](07_Security.md) §7.3.6. Requirements in §18.12. |

### 18.1.2 Implication Rule

Claiming a dependent profile implies conformance to the base Profile. An implementation claiming "Client" MUST also conform to "Core".

### 18.1.3 Declaration

An implementation SHOULD publish its conformance claim in the machine-readable form described in §18.8. An implementation MUST NOT declare a Profile it does not fully satisfy.

### 18.1.4 Per-Profile Version Gating

Some Profile requirements are further gated by `since: vX.Y` on the underlying feature. A runtime claiming a Profile at a given DSL version MUST satisfy all requirements of that Profile at or below that version.

---

## 18.2 Core Profile

Required for every conformant implementation.

### 18.2.1 Required Widget Types

Runtimes MUST parse and render every widget in [`17_Naming.md`](17_Naming.md) §17.2.1 that is tagged *Core Profile*, and MUST satisfy [`06_Runtime_Contract.md`](06_Runtime_Contract.md) §6.13 for any behaviour those widgets declare — **rendering a facsimile of a behaviour succeeding is non-conformant**, and is not made conformant by the widget being drawn. This comprises:

- **Layout:** `box`, `linear`, `stack`, `center`, `align`, `padding`, `expanded`, `flexible`, `spacer`, `sizedBox`, `wrap`, `positioned`, `safeArea`, `visibility`, `conditional`, `margin`, `aspectRatio`, `fractionallySized`, `intrinsicHeight`, `intrinsicWidth`, `accordion` *(since v1.4)* — `constrained` used to be listed here as if it were a widget of its own; it is a legacy alias of `box` (§17.3.1), and required sets name canonical types only.
- **Display:** `text`, `richText`, `image`, `icon`, `card`, `divider`, `verticalDivider`, `badge`, `chip`, `avatar`, `tooltip`, `placeholder`, `progressBar`, `banner`
- **Input:** `button`, `iconButton`, `textInput`, `toggle`, `select`, `checkbox`, `checkboxGroup`, `radio`, `radioGroup`, `slider`, `rangeSlider`, `numberField`, `form`, `rating`, `fileInput` *(since v1.4)*, `multiSelect` *(since v1.4)*, `combobox` *(since v1.4)*, `otpInput` *(since v1.4)*, `dateTimePicker` *(since v1.4)*
- **Date/time input:** `dateField`, `timeField`, `datePicker`, `timePicker`, `dateRangePicker`, `colorPicker`, `segmentedControl`, `stepper`, `numberStepper`
- **List:** `list`, `grid`, `listItem`
- **Navigation:** `headerBar`, `bottomNavigation`, `tabBar`, `tabBarView`, `drawer`, `navigationRail`, `floatingActionButton`, `popupMenuButton`, `menu` *(since v1.4)*, `contextMenu` *(since v1.4)*, `breadcrumb` *(since v1.4)*, `pagination` *(since v1.4)*, `link` *(since v1.4)*
- **Scroll:** `scrollView`, `singleChildScrollView`, `scrollBar`, `pageView`
- **Interaction:** `gestureDetector`, `inkWell`, `draggable`, `dragTarget`
- **Dialog:** `alertDialog`, `simpleDialog`, `customDialog`, `snackBar`, `bottomSheet`, `popover` *(since v1.4)*
- **Animation:** `animatedContainer`, `opacity` *(since v1.3)*, `transform` *(since v1.3)*, `lottieAnimation`
- **Utility:** `fittedBox`, `clipOval`, `clipRRect`, `decoration`, `accessibleWrapper`, `lazy`

Unknown widget types MUST NOT crash the runtime; the runtime MUST continue
rendering the rest of the document, and MUST **report** the failure through a
channel the host can observe (log, error hook, or the consumer's declared
error surface).

What it MUST NOT do is put developer text on an end user's screen. An earlier
reading of this clause — "render an error placeholder" — was implemented as a
red box carrying the message and the widget type in *every* build, so a single
typo in a served document reached a customer as `Unknown widget type: …` while
the operator, the one person who could fix it, got nothing. A runtime SHOULD
draw the reason only where a developer is looking (a debug build), and collapse
the slot in a release build.

This is §6.13 applied one level up: a capability that is absent is reported and
not faked, and a widget that cannot be built is reported and not narrated on
the page. See [`02_Widgets.md`](02_Widgets.md).

### 18.2.2 Required Action Types

Runtimes MUST handle every action type tagged *Core Profile* in [`17_Naming.md`](17_Naming.md) §17.2.2:

`state`, `navigation`, `tool`, `resource`, `dialog`, `batch`, `conditional`, `notification`, `parallel`, `sequence`, `cancel`, `animation`.

See [`04_Actions.md`](04_Actions.md) for behavior. Actions whose `type` is unknown MUST fail gracefully with a logged error; they MUST NOT crash the runtime.

### 18.2.3 Required Navigation Sub-Actions

Runtimes MUST support every navigation sub-action in [`17_Naming.md`](17_Naming.md) §17.2.3:

- `push`, `replace`, `pop`, `popToRoot`, `pushAndClear`, `setIndex` — core.
- `openApp`, `exitApp` *(since v1.3)* — runtimes claiming Core at v1.3+ MUST support both; `exitApp` MUST invoke the host-registered `onExit` callback as described in [`06_Runtime_Contract.md`](06_Runtime_Contract.md) §6.6.1.
- `openUrl` *(since v1.4)* — runtimes claiming Core at v1.4+ MUST attempt to open the URL through the host and MUST report failure via `onError` rather than no-op ([`04_Actions.md`](04_Actions.md) §4.3.3).

### 18.2.4 Required State Sub-Actions

`set`, `increment`, `decrement`, `toggle`, `append`, `remove`, `push`, `pop`, `removeAt` per [`17_Naming.md`](17_Naming.md) §17.2.4.

### 18.2.5 Required Binding Features

- `{{...}}` expression syntax ([`03_Data_Binding.md`](03_Data_Binding.md) §3.2).
- Prefix resolution per [`03_Data_Binding.md`](03_Data_Binding.md) §3.4 for the Core prefix set: bare variable, `state.`, `page.`, `app.`, `route.params.`, `theme.`, `event.`, and the list-iteration context variables (`item`, `index`, `isFirst`, `isLast`, `isEven`, `isOdd`).
- The sixteen built-in expression functions ([`03_Data_Binding.md`](03_Data_Binding.md) §3.5).
- Type coercion rules ([`03_Data_Binding.md`](03_Data_Binding.md) §3.6).

Binding failures MUST NOT crash the runtime. Unknown prefixes MUST resolve to `null`.

### 18.2.6 Required MCP Protocol Support

Runtimes MUST implement the MCP contract described in [`06_Runtime_Contract.md`](06_Runtime_Contract.md):

- `resources/read` for `ui://app` and `ui://page/*`.
- `tools/call` dispatch.
- Resource subscription in *standard* mode (extended mode SHOULD).
- Consumption of `notifications/resources/updated`.
- Well-known resources per §6.2.

### 18.2.7 Required Theme Support

Runtimes MUST implement [`05_Theme.md`](05_Theme.md):

- `light`, `dark`, and `system` modes (with `system` dynamically tracking host brightness).
- **Color** — Material 3 28 roles (primary · onPrimary · primaryContainer · onPrimaryContainer · secondary · onSecondary · secondaryContainer · onSecondaryContainer · tertiary · onTertiary · tertiaryContainer · onTertiaryContainer · error · onError · errorContainer · onErrorContainer · surface · onSurface · surfaceVariant · onSurfaceVariant · surfaceTint · background · onBackground · outline · outlineVariant · inverseSurface · inverseOnSurface · inversePrimary · scrim · shadow) plus 6 semantic (success · onSuccess · warning · onWarning · info · onInfo).
- **Typography** — Material 3 15 roles (display/headline/title/body/label × Large/Medium/Small) plus 6 TextStyle fields (fontFamily · fontSize · fontWeight · lineHeight · letterSpacing · fontFeatureSettings).
- **Spacing** — 9 slots (xxs · xs · sm · md · lg · xl · 2xl · 3xl · 4xl) plus 4 layout primitives (screenPadding · cardPadding · sectionGap · inlineGap).
- **Shape** — Material 3 7 family (none · extraSmall · small · medium · large · extraLarge · full) plus per-corner override (topStart / topEnd / bottomStart / bottomEnd).
- **Elevation** — Material 3 6 levels (level0–level5).
- `theme.*` binding resolution plus page-level `themeOverride` (deep merge).
- DTCG W3C JSON import per [`05b_DTCG_Interchange.md`](05b_DTCG_Interchange.md) — the 9 categories in § B.3.

Runtimes SHOULD implement:

- HCT seed → tonal palette auto-generation (Material color utilities algorithm).
- State layer opacity (hover 0.08 / focus 0.12 / pressed 0.16 / disabled 0.38).
- DTCG W3C JSON export.
- **Motion** — Material 3 13 durations plus 4 easings.
- **Density** — comfortable / standard / compact (3-step).
- **Breakpoints** — Material 3 5-class (compact · medium · expanded · large · extraLarge).
- **Border** (5 width aliases · style), **Opacity** (M3 11-step), **FocusRing** (color/width/offset/radius), **Z-index** (9 layers).
- **Component tokens** — button · input · card · dialog · menu · list (6 standard) — applied per recognized component.

Runtimes MAY implement:

- Additional spacing slots (`5xl`, `6xl`, etc.).
- Additional component tokens (chip · tab · switch, etc.).
- Author-defined custom semantic roles.

Earlier-draft naming — `theme.colorScheme.<mode>.<slot>` (textOnPrimary, divider, etc.), `theme.typography.headline1-6` / `subtitle1/2` / `overline`, `theme.spacing.small/medium/large`, `theme.borderRadius.*`, `theme.elevation.small/medium/large` — is **removed in 1.3**. Only the new naming is valid.

### 18.2.8 Required Security Behaviors

Runtimes MUST implement [`07_Security.md`](07_Security.md):

- Expression sandbox with time and memory limits (§7.1).
- Input validation (§7.2) — invalid JSON is rejected; unknown widget types render as error placeholders.
- State isolation per application, per page, and per template instance (§7.4).
- XSS and injection prevention for user input rendering (§7.5).
- Bundle integrity verification when the Bundle Profile is also claimed (§7.6).

### 18.2.9 Required Accessibility

Runtimes MUST implement [`13_Accessibility.md`](13_Accessibility.md):

- Accept the structured `accessibility.label`, `accessibility.hint`, `accessibility.role`, `accessibility.live` properties.
- Accept the `semanticLabel` shorthand.
- Accept the ARIA-legacy aliases `ariaLabel` / `aria-label` / `ariaHint` / `aria-hint` / `ariaRole` / `aria-role` / `role` / `ariaLive` / `aria-live` per [`17_Naming.md`](17_Naming.md) §17.3.2.
- Enforce a minimum 48×48 dp hit region for interactive widgets (§13.6).
- Honor the default role-per-widget table (§13.3.1).

### 18.2.10 Required Legacy Alias Acceptance

Runtimes MUST accept every alias registered in [`17_Naming.md`](17_Naming.md) §17.3. When a canonical key and an alias key are both present on the same object, the canonical key wins (§17.5.3). Runtimes MAY log a deprecation warning on alias use; they MUST NOT reject the input.

### 18.2.11 Performance (SHOULD)

- Widget-tree render SHOULD complete in < 100 ms for a tree of 1000 widgets.
- Binding resolution SHOULD complete in < 10 ms for 1000 expressions.
- State-update propagation SHOULD complete in < 16 ms to preserve 60 fps.
- Expression parse results SHOULD be cached.
- Large lists SHOULD be rendered with lazy/viewport strategies.

### 18.2.12 Required Asset Resolution *(since v1.4)*

Collected from [`06_Runtime_Contract.md`](06_Runtime_Contract.md) §6.12. Applies to every slot typed `AssetRef`.

**MUST — the floor.** These need no I/O capability, so a runtime on any host can meet them:

- `data:` — inline bytes, base64 and url-encoded.
- `assets/` — local asset paths declared by the consumer app.
- A **binding** in any `AssetRef` position, resolved before scheme dispatch (§6.12.2).
- One resolution path shared by all `AssetRef` slots — two widgets given the same reference MUST resolve it identically (§6.12).
- Unresolvable assets take the slot's declared fallback and never render an implementation detail on screen (§6.12.4).
- A published set of the forms the runtime resolves.

**SHOULD — expected of any runtime with I/O:**

- `bundle://` — resolved against the ambient origin (§6.12.3).
- `https://` / `http://`.
- Asynchronous resolution with a pending state distinct from failure (§6.12.5).

**MAY:**

- `client://` — host-served resources, gated on the Client Profile's permission system (§18.3.3).
- `AssetRef` object form — `{uri, origin?}` read via `resources/read`. A runtime claiming this MUST resolve a missing `origin` to the ambient origin, never the embedder's.
- Schemes not named in this document.

A runtime claims **Core Profile** on the MUST list alone. Claiming more than it resolves is the failure this section exists to prevent: a host cannot route around a gap it was told does not exist.

---

## 18.3 Client Profile *(since v1.1)*

Required for runtimes that expose client-side capabilities (file system, network, system info, channels). Collected from distributed MUSTs across [`08_Client_Extensions.md`](08_Client_Extensions.md).

### 18.3.1 Required Client Actions

Runtimes claiming the Client Profile MUST support the *file*, *network*, *system*, and *storage* client actions in [`17_Naming.md`](17_Naming.md) §17.2.2 and [`08_Client_Extensions.md`](08_Client_Extensions.md) §8.2:

`client.selectFile`, `client.readFile`, `client.writeFile`, `client.saveFile`, `client.listFiles`, `client.httpRequest`, `client.getSystemInfo`, `client.clipboard`, `client.notification`, `client.storage.get`, `client.storage.set`, `client.storage.remove`.

All client actions MUST return the unified result envelope described in §8.2.5.

### 18.3.2 SHOULD and MAY Client Actions

- `client.exec` SHOULD be supported. It requires the `system.exec` permission; runtimes MAY refuse to implement `client.exec` in sandboxed or security-restricted deployments.

### 18.3.3 Required Permission System

Runtimes MUST implement [`08_Client_Extensions.md`](08_Client_Extensions.md) §8.4:

- The seven permission categories (§8.4.1).
- Page-level permission declaration parsing (§8.4.2).
- The four trust levels — `untrusted`, `basic`, `elevated`, `full` — and their default capability mapping (§8.4.3).
- Permission request flow with user consent (§8.4.4).
- `permissions.*` binding resolution (§8.4.5).
- `permission.revoke` action (§8.4.6, §8.7).

Runtimes MUST reject `client.*` action calls whose required permission has not been granted, returning the standard error envelope.

### 18.3.3a Required Client Widgets *(since v1.4)*

A runtime claiming the Client Profile at v1.4+ MUST render `voiceInput` and MUST gate microphone capture behind the permission system of §18.3.3. Denial, absence of a device, and transcription failure MUST all reach the widget's `onError` — a control that renders and then does nothing is worse than one that reports it cannot run.

### 18.3.4 Required Channel Support

Runtimes MUST implement [`08_Client_Extensions.md`](08_Client_Extensions.md) §8.6:

- Channel declaration parsing (§8.6.1).
- All channel types (§8.6.2).
- Channel lifecycle actions `channel.start`, `channel.stop`, `channel.restart`, `channel.toggle`, `channel.send` (§8.6.3).
- Both the canonical action shape and the v1.1 legacy shape per [`17_Naming.md`](17_Naming.md) §17.3.4.
- Channel callbacks `onMessage`, `onError`, `onConnect`, `onDisconnect` (§8.6.4).
- Lifecycle configuration including auto-start and restart policy (§8.6.5).
- `channels.*` binding resolution (§8.6.6).
- Message envelope parsing (§8.6.7).

### 18.3.5 Required `client://` Protocol

Runtimes MUST resolve the `client://file`, `client://workspace`, `client://temp`, `client://cache` resource URIs per [`08_Client_Extensions.md`](08_Client_Extensions.md) §8.3. Path traversal outside the declared scope MUST be rejected (§8.3.3).

### 18.3.6 Required Client Bindings

Runtimes MUST resolve the `client.`, `client.theme.`, `client.env.`, `client.file.`, `client.system.`, `permissions.`, `channels.`, `resources.` prefixes per [`17_Naming.md`](17_Naming.md) §17.2.5 and [`08_Client_Extensions.md`](08_Client_Extensions.md) §8.5. `client.env.*` MUST restrict access to a safe allowlist and MUST NOT expose variables that may contain secrets.

---

## 18.4 Bundle Profile *(since v1.2)*

Required for runtimes that load packaged MCP applications with metadata, icons, splashes, or bundled assets.

### 18.4.1 Required

Runtimes claiming the Bundle Profile MUST:

- Accept all ApplicationDefinition metadata fields in [`11_Bundle_Metadata.md`](11_Bundle_Metadata.md) §11.1. Every field is optional; absence MUST NOT produce a parse error.
- Parse the `PublisherInfo` (§11.2), `TimestampInfo` (§11.3), and `SplashConfig` (§11.4) structures.
- Resolve `bundle://` URIs within the loaded bundle per §11.5.
- Serve or consume the `ui://app/info` well-known resource per §11.6.

### 18.4.2 SHOULD

- Implement `BundleUiReadAdapter` / `BundleUiWriteAdapter` against the `UiPort` contract described in [`11_Bundle_Metadata.md`](11_Bundle_Metadata.md) §11.8.
- Verify bundle integrity via manifest checksum when the bundle declares one ([`07_Security.md`](07_Security.md) §7.6).
- Display app metadata (icon, category, publisher) when available.
- Request `ui://app/info` for app listings before loading the full ApplicationDefinition.

### 18.4.3 Backward Compatibility

- All v1.2 metadata fields are additive. A Core-only runtime (no Bundle Profile) MUST ignore unknown v1.2 fields gracefully and render the application normally.
- A Bundle-Profile runtime MUST accept ApplicationDefinitions with or without v1.2 metadata fields.
- The `dashboard` ApplicationDefinition field *(since v1.3)* is separate from visual widgets (see [`11_Bundle_Metadata.md`](11_Bundle_Metadata.md) §11.9). Runtimes claiming Bundle at v1.3+ SHOULD support both `renderApp()` and `renderDashboard()` rendering modes.

---

## 18.5 Advanced Profile *(since v1.0)*

Required for runtimes that expose advanced visualization or editor widgets.

### 18.5.1 Required

Runtimes claiming the Advanced Profile MUST parse and render every widget in [`10_Advanced_Widgets.md`](10_Advanced_Widgets.md) §10.1, subject to the version gating in §18.5.2, and MUST satisfy §6.13 for the behaviour each declares. Most of this catalogue is behavioural — media plays, a web view loads, a map draws tiles, a document paginates — so "render" alone is not the test: a runtime that draws the chrome of a player, a browser or a map without performing what it depicts is **not conformant at this level**, and MUST instead declare the capability absent (§6.13.2) and report through `onError`.

Declaring a capability absent is not a failure of conformance. Faking it is.

`chart`, `table`, `dataTable`, `map`, `mediaPlayer`, `calendar`, `timeline`, `gauge`, `heatmap`, `tree`, `graph`, `networkGraph`, `codeEditor`, `terminal`, `fileExplorer`, `markdown`, `webView`, `signature`, `canvas`, `lightbox`, `qrCode`, `barcode`, `pdfViewer`, `diffViewer`, `richTextEditor`, `splitter`, `resizable`, `kanban`, `gantt`, `spreadsheet`.

The list is the §10.1 catalog. It had drifted — `canvas` and `lightbox` were in the catalog and gated in §18.5.2 but absent here, so a reader checking only this section saw a shorter obligation than the one §18.5.1 states.

### 18.5.2 Version-Gated Widgets

- `qrCode`, `barcode`, `pdfViewer`, `diffViewer`, `richTextEditor`, `splitter`, `resizable`, `kanban`, `gantt`, `spreadsheet` — required only for runtimes claiming Advanced at **v1.4+**. A runtime claiming Advanced at v1.0–v1.3 MAY omit them.
- `canvas` — required only for runtimes claiming Advanced at v1.3+ (see [`10_Advanced_Widgets.md`](10_Advanced_Widgets.md) §10.3). A runtime claiming Advanced at v1.0 / v1.1 / v1.2 MAY omit `canvas`.

Note: `opacity` and `transform` *(since v1.3)* are Core-Profile animation widgets, not Advanced — see §18.2.1 and [`16_Animations.md`](16_Animations.md) §16.11.

### 18.5.3 Unsupported Widget Handling

When an advanced widget is absent (either because the runtime does not claim the Advanced Profile, or because a specific widget is version-gated away), the runtime MUST follow the unknown-widget rule from §18.2.1 — render an error placeholder; do not crash.

---

## 18.6 Template Profile

### 18.6.1 Required (Template Profile at v1.1+)

Runtimes claiming the Template Profile at v1.1 or later MUST implement [`09_Templates.md`](09_Templates.md):

- The `use` and `template` widget types (§9.1, §9.2, §9.6).
- Map-key template-definition form (§9.2.1).
- Parameter validation via `TemplateParamDefinition.validate()` (§9.3.1).
- Slot resolution (§9.4).
- Scoped styles with the isolation rules in §9.5.1 and the resolution order in §9.5.2.
- Template registry operations (`registerFromJson`, `registerBuiltIns`) (§9.12).
- `itemTemplate` in list widgets (§9.6.1).
- Template safety constraints from [`07_Security.md`](07_Security.md) §7.7.

### 18.6.2 Required (Template Profile at v1.3+)

Additionally, runtimes claiming the Template Profile at v1.3 or later MUST implement:

- Stateful templates — `stateDefaults`, `local.*` scope, isolation per instance (§9.8).
- Template lifecycle hooks `onMount`, `onUnmount`, including the execution guarantees in §9.9.1.
- Remote template libraries — `templateLibraries` entry schema (§9.11.1), acceptable URI schemes (§9.11.2), library document format (§9.11.3), and registration / collision rules (§9.11.4) where **local definitions win** on name collision.
- The template resolution order in §9.10.
- Runtimes MUST execute `onUnmount` when a template instance is unmounted and MUST NOT share `local.*` state between instances.

### 18.6.3 Without the Template Profile

A runtime that does not claim the Template Profile MUST treat `"type": "use"` and `"type": "template"` as unknown widget types per §18.2.1. Applications that rely on templates but are loaded by a Core-only runtime degrade to error placeholders; they MUST NOT crash.

---

## 18.7 Composition Profile *(since v1.4)*

The Composition Profile covers rendering definitions sourced from origins other than the one serving the document — [`01_Core_Concepts.md`](01_Core_Concepts.md) §1.9 (`DefinitionSource`), the [`view`](02_Widgets.md#2131-view-since-v14) widget, [`06_Runtime_Contract.md`](06_Runtime_Contract.md) §6.11 (resolution), [`07_Security.md`](07_Security.md) §7.10 (origin isolation), and [`08_Client_Extensions.md`](08_Client_Extensions.md) §8.8 (cross-origin scope).

This profile is the conformance gate for multi-origin composition. Per §1.7.3 a runtime's support surface is declared by profile, not by version; a host that cannot isolate scopes per origin simply does not claim this profile.

### 18.7.1 Required

Runtimes claiming the Composition Profile MUST:

- Accept all four `DefinitionSource` forms (§1.9.1), including the qualified `{ $ref, from }` reference and the binding form.
- Accept `Origin` of the form `{ "connection": <id> }`, resolving a binding inside it in the scope containing the source (§6.11.2).
- **Reject** an `Origin` whose key they do not recognise, and reject a `from` naming a connection that does not exist — never falling back to the current origin (§6.11.2, §7.10.1 rule 6).
- Implement the `view` widget with `source`, `props`, `fallback`, `loading`, `onError`, and `theme` (§2.13.1).
- Accept a `DefinitionSource` anywhere `RouteValue` is accepted (§1.2.1).
- Run each embedded definition in its own scope — own state tree, own subscription registry, own permission and storage identity (§6.11.3).
- Enforce every requirement in [`07_Security.md`](07_Security.md) §7.10.1, in particular permission **intersection** (never union) and `props` as the only embedder→embedded channel.
- Dispatch `tool` calls, resource reads, and subscriptions inside an embedded scope to that scope's ambient origin (§1.9.5).
- Route `notifications/resources/updated` to the scope(s) bound to the connection that delivered them, never to the embedder (§6.11.3).
- Contain failure: an unresolvable source renders `fallback` and fires `onError` without failing sibling views or the embedding page (§6.11.4).
- Re-resolve and remount an embedded scope when its connection reconnects (§6.11.4).
- Enforce a maximum embedding depth and detect origin cycles, failing the offending source rather than recursing (§6.11.4).

### 18.7.2 Optional

- Explicit cross-scope actions carrying an `origin` (§8.8.3). A runtime that does not implement them MUST reject such actions rather than dispatch them to the ambient origin.
- `theme: "own"` (§2.13.1). A runtime that supports only `inherit` MUST say so in its conformance claim; it MUST NOT silently substitute one for the other, since the choice is visible to the user.

### 18.7.3 Without the Composition Profile

A runtime that does not claim this profile:

- MUST treat `"type": "view"` as an unknown widget type per §18.2.1 (error placeholder, no crash).
- MUST reject a `DefinitionSource` carrying `from`, and a `RouteValue` of the qualified form — it MUST NOT resolve `$ref` against its own origin. This is the one place where the forward-compatibility allowance of §1.7.2 does not apply, because a permissive reading substitutes one server's UI for another's.

Documents that compose origins therefore degrade to a visible error on a non-composing runtime, never to a silently wrong render.

---

## 18.8 Conformance Claims

Implementations SHOULD publish their conformance claim in a machine-readable form. The canonical shape is YAML or an equivalent JSON object:

```yaml
mcp_ui_dsl:
  profiles: [Core, Client, Template]
  version: 1.3
  implementation: flutter_mcp_ui_runtime
  version_implementation: 0.9.0
  optional:
    canvas: true
    client.exec: false
    extendedSubscriptions: true
```

Fields:

| Field | Purpose |
|-------|---------|
| `profiles` | List of Profile names satisfied by the implementation. |
| `version` | Highest DSL version level at which the declared Profiles are claimed. |
| `implementation` | Implementation name (free-form). |
| `version_implementation` | Implementation's own semver (independent of DSL version per D10). |
| `optional` | Map of version-gated or SHOULD-level features and whether they are supported. |

An implementation MUST NOT list a Profile it does not fully satisfy at the declared `version`.

---

## 18.9 Conformance Testing

Each Profile has an associated test suite. Test IDs are prefixed:

| Prefix | Profile | Scope |
|--------|---------|-------|
| `CORE-*` | Core | Widgets, actions, bindings, protocol, theme, security, accessibility, legacy aliases. |
| `CLI-*` | Client | Client actions, permissions, channels, `client://` protocol, client bindings. |
| `BND-*` | Bundle | Metadata parsing, `bundle://` resolution, `ui://app/info`, adapters, dashboard. |
| `ADV-*` | Advanced | Each advanced widget; canvas at v1.3+. |
| `TPL-*` | Template | Static invocation (v1.1) and stateful / lifecycle / remote libraries (v1.3). |
| `PAY-*` | Payment | The `payment` action, envelope mapping, return-link matching, and refusal when unclaimed. |

A runtime passes a Profile suite when every MUST-level test returns green and SHOULD-level tests either pass or are documented as deliberate deviations. A runtime claiming multiple Profiles MUST pass every suite it claims.

Test suite authoring follows the canonical vocabulary in [`17_Naming.md`](17_Naming.md) §17.2. Test inputs MAY exercise legacy aliases to verify §18.2.10.

---

## 18.10 Informative: Feature-to-Profile Map

Quick lookup of which profile each feature section belongs to.

| Feature section | Profile |
|-----------------|---------|
| [`01_Core_Concepts.md`](01_Core_Concepts.md) — Application / Page / Widget tree | Core |
| [`02_Widgets.md`](02_Widgets.md) — Core widget catalog | Core |
| [`03_Data_Binding.md`](03_Data_Binding.md) — Binding syntax, prefixes, functions | Core |
| [`04_Actions.md`](04_Actions.md) — Core action catalog | Core |
| [`05_Theme.md`](05_Theme.md) — Theme system | Core |
| [`06_Runtime_Contract.md`](06_Runtime_Contract.md) — MCP protocol contract | Core |
| [`07_Security.md`](07_Security.md) §§7.1–7.5, 7.9 | Core |
| [`07_Security.md`](07_Security.md) §7.6 — Bundle integrity | Bundle |
| [`07_Security.md`](07_Security.md) §7.7 — Template safety | Template |
| [`07_Security.md`](07_Security.md) §7.8 — Offline encryption | Client |
| [`08_Client_Extensions.md`](08_Client_Extensions.md) | Client |
| [`09_Templates.md`](09_Templates.md) §§9.1–9.7, 9.12, 9.13 | Template (v1.1+) |
| [`09_Templates.md`](09_Templates.md) §§9.8–9.11 | Template (v1.3+) |
| [`01_Core_Concepts.md`](01_Core_Concepts.md) §1.9 — DefinitionSource / Origin | Composition (v1.4+) |
| [`02_Widgets.md`](02_Widgets.md) §2.13.1 — `view` | Composition (v1.4+) |
| [`06_Runtime_Contract.md`](06_Runtime_Contract.md) §6.11 — Multi-origin resolution | Composition (v1.4+) |
| [`07_Security.md`](07_Security.md) §7.10 — Origin isolation | Composition (v1.4+) |
| [`08_Client_Extensions.md`](08_Client_Extensions.md) §8.8 — Cross-origin scope | Composition (v1.4+) |
| [`10_Advanced_Widgets.md`](10_Advanced_Widgets.md) | Advanced |
| [`10_Advanced_Widgets.md`](10_Advanced_Widgets.md) §10.3 — `canvas` | Advanced (v1.3+) |
| [`11_Bundle_Metadata.md`](11_Bundle_Metadata.md) §§11.1–11.8 | Bundle |
| [`11_Bundle_Metadata.md`](11_Bundle_Metadata.md) §11.9 — Dashboard | Bundle (v1.3+) |
| [`12_Internationalization.md`](12_Internationalization.md) | Core |
| [`13_Accessibility.md`](13_Accessibility.md) | Core |
| [`14_Responsive_Events.md`](14_Responsive_Events.md) | Core |
| [`15_Offline_Sync.md`](15_Offline_Sync.md) | Client |
| [`16_Animations.md`](16_Animations.md) | Core (all animation widgets + `animation` action; optional advanced drivers degrade per §16.11) |
| [`04_Actions.md`](04_Actions.md) §4.24 — `payment` | Payment (v1.4.2+) |
| [`07_Security.md`](07_Security.md) §7.3.5 — Payment and return links | Payment (v1.4.2+) |
| [`17_Naming.md`](17_Naming.md) — Canonical vocabulary and alias registry | Core (alias acceptance is a Core MUST) |

---

## 18.11 Payment Profile *(since v1.4.2)*

### 18.11.1 Required

A runtime claiming the Payment Profile MUST:

1. **Dispatch `payment`** ([`04_Actions.md`](04_Actions.md) §4.24) — resolve the declared fields from bindings and hand them to a host payment port.
2. **Own the destination** — assemble the payment address in the host, from a payment surface the host is configured against. A runtime MUST NOT accept a URL, an origin or a provider name from the document ([`07_Security.md`](07_Security.md) §7.3.5).
3. **Resolve the receiving party** — use `seller` where the document names one; where it does not, resolve it from the verified identity of the serving origin and refuse with `PAYMENT_UNAVAILABLE` when that is not possible (§4.24.2). Falling back to a default party is non-conformant.
4. **Carry an amount only where the item takes one** — send `amount` for customer-priced items only, refuse an out-of-range value rather than clamping it, and never present the document's number as the price of an item priced elsewhere (§4.24.3).
5. **Present the provider choice** — where the receiving party offers several, the host renders the choice. A runtime MUST NOT let the document name the provider, and an abandoned choice is `PAYMENT_CANCELLED`.
6. **Mint and match the return** — a custom-scheme return address carrying a fresh unguessable request token per dispatch, and discard returns that match no outstanding request.
7. **Map the outcome to the §4.17 envelope** — `success` to `onSuccess` with `data.status`; cancel, unreadable return and host failure to `onError` with `PAYMENT_CANCELLED`, `PAYMENT_UNKNOWN` and `PAYMENT_UNAVAILABLE` respectively. Routing cancel or unknown to `onSuccess` is non-conformant.
8. **Refuse visibly** — an unwired payment port MUST produce `onError` with `PAYMENT_UNAVAILABLE`. A no-op is non-conformant.
9. **Refuse at `untrusted`** — MUST NOT dispatch `payment` from a document at trust level `untrusted`.
10. **Claim no more than it does** — a runtime that presents the payment surface but cannot receive the return MUST NOT claim this Profile. Half of this feature is a payment the application never learns the outcome of.

### 18.11.2 Not required

The Profile says nothing about how payment is confirmed, because confirmation does not happen in the runtime ([`04_Actions.md`](04_Actions.md) §4.24.4). A conformant runtime delivers an outcome to a callback; whether the value behind that callback is released is decided server-side by whoever released it.

### 18.11.3 Without the Payment Profile

A runtime that does not claim it MUST fail `payment` through `onError` with `PAYMENT_UNAVAILABLE` per §18.2.2 — logged, graceful, no crash, and never silent.

## 18.12 Location Profile *(since v1.4.3)*

### 18.12.1 Required

A runtime claiming the Location Profile MUST:

1. **Dispatch `location`** ([`04_Actions.md`](04_Actions.md) §4.25) — resolve the declared fields from bindings and hand them to a host location port.
2. **Own the prompt** — the host asks, in its own words, through the platform's own mechanism. A runtime MUST NOT render a consent prompt of its own and MUST NOT proceed on a prompt the document drew.
3. **Treat `precision` as a ceiling** — MAY answer coarser, MUST NOT answer finer than asked, and MUST report what actually arrived in `precision` and `accuracyMeters` (§4.25.2).
4. **Answer only to an act** — MUST NOT dispatch from a lifecycle hook, a timer or a binding evaluation, and MUST NOT read a position while the document is not being rendered (§4.25.3).
5. **Not cache across dispatches** — a second dispatch is a second question. Returning a stored position to avoid asking again is non-conformant, because a stale position presented as current is a wrong answer that looks like a fast one.
6. **Keep a refusal a refusal** — `LOCATION_DENIED` goes to `onError`, and the runtime MUST NOT re-ask on its own.
7. **Map the outcome to the §4.17 envelope** — a position to `onSuccess` with `data.latitude`, `data.longitude`, `data.accuracyMeters`, `data.precision`, `data.at`; refusal and every host-side failure to `onError` with `LOCATION_DENIED` and `LOCATION_UNAVAILABLE` respectively.
8. **Refuse visibly** — an unwired location port MUST produce `onError` with `LOCATION_UNAVAILABLE`. A no-op is non-conformant.
9. **Refuse at `untrusted`** — MUST NOT dispatch `location` from a document at trust level `untrusted`.
10. **Never answer identity with it** — MUST NOT derive a principal from a position or use one to satisfy an identity requirement (§4.25.4).

### 18.12.2 Not required

The Profile says nothing about **accuracy** — how close the answer is depends on the device, the sky and the platform, and a runtime that reports what it was given is conformant even when that is poor. What it may not do is report an accuracy it did not measure.

Nor does it require a continuous form. There is none to require: §4.25 defines a single question, and a runtime that added a feed would be claiming something this Profile does not define.

### 18.12.3 Without the Location Profile

A runtime that does not claim it MUST fail `location` through `onError` with `LOCATION_UNAVAILABLE` per §18.2.2 — logged, graceful, no crash, and never silent. A host that can answer but is configured never to report position uses the same code: the document is told it cannot have one, never told that it asked wrongly.
